fixed overflow to other elements error

--- a/src/elements/service-config-dropdown/__dropdown-services/service-config-dropdown__dropdown-services.scss
+++ b/src/elements/service-config-dropdown/__dropdown-services/service-config-dropdown__dropdown-services.scss
@@ -5,6 +5,8 @@
 	border-top: 0;
 	border-radius: 0 0 $inputBorderRadius $inputBorderRadius;
 	position: absolute;
+	z-index: 2;
+	background-color: white;
 	width: 100%;
 	table {
 		width: 100%;
